--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "login": "nome",
-    "senha": "password",
-    "diretorio1": "C:\\pastaum",
-    "diretorio2": "F:\\pastadois"
+    "login": "login",
+    "senha": "senha",
+    "diretorio1": "C:/diretorio/um",
+    "diretorio2": "C:/diretorio/dois"
 }
