finishing some fixes at 'exception' and visual interface

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "login": "login",
-    "senha": "senha",
+    "login": "0931221",
+    "senha": "@Floki12530981744",
     "diretorio1": "C:/diretorio/um",
     "diretorio2": "C:/diretorio/dois"
 }
