Primeiro teste realizado, está funcional.
(1/2) Mensagem de notificação ajustada

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "login": "0931221",
-    "senha": "@Floki12530981744",
+    "login": "login",
+    "senha": "senha",
     "diretorio1": "C:/diretorio/um",
     "diretorio2": "C:/diretorio/dois"
 }
